--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!--added a descriptive title to head of document-->
     <title>Horiseon - Search Optimization</title>
 </head>
 
 <body>
-    <header class="header">
+    <!--changed div to semantic element-->
+    <header="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -80,12 +82,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <!--changed to semantic footer-->
+    <footer="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
